fix: testimonial header spacing

--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 0 28px 28px 0;
 }
 
 #projects-wrapper {
@@ -262,6 +263,10 @@ nav {
 .project-card-footer {
   display: flex;
   gap: 16px;
+}
+
+.testimonials-header-wrapper {
+  padding: 0 40px;
 }
 
 .testimonials {
